bk_ida/gccida/g1/simplify_subreg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:2942:23: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:2942:55: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_subreg( machine_mode outermode, rtx op, machine_mode innermode, unsigned int byte) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:2992:31: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v8 == v12 && v9 > v12 && mode_class_0[outermode] == MODE_INT ) 
                              ^~~~~~~~~~~~
                              mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3002:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)op->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3005:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[outermode] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3031:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14.rtwint = ( __int64)op[1]; 
                       ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3033:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)op[1].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3045:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v26.rtwint = ( __int64)op[1]; 
                       ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3047:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v26.rtwint = ( __int64)op->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3049:46: error: use of undeclared identifier 'machine_mode'
res = simplify_subreg( outermode, v26.rtx, ( machine_mode)*( unsigned __int8 *)( v26.rtwint + 2), v27); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3079:21: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&res[1] = op[1]; 
                    ^ ~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3094:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v19 = ( int)op[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/simplify-rtx.c:3114:42: error: use of undeclared identifier 'machine_mode'
res = simplify_subreg( outermode, res, ( machine_mode)v18, v20); 
                                         ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_subreg/src/obj/simplify-rtx.o] Error 1
